# C-Jam-SportsTrivia

./: CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md
snap/: snapcraft.yaml
sports_trivia/: CMakeLists.txt
sports_trivia.audio/: CMakeLists.txt
sports_trivia.audio/include/: audio.h
sports_trivia.audio/src/: audio.c
sports_trivia.gameengine/: CMakeLists.txt
sports_trivia.gameengine/include/: dataservices.h  player.h  trivia.h  vector.h
sports_trivia.gameengine/src/: dataservices.c  player.c  trivia.c  vector.c
sports_trivia.gameengine/test/: CMakeLists.txt  main.c  playerTest.c
sports_trivia.ui/: CMakeLists.txt
sports_trivia.ui/include/: gamewindow.h  input.h  label.h  texture.h
sports_trivia.ui/src/: gamewindow.c  input.c  label.c  texture.c
sports_trivia.ui/test/: CMakeLists.txt  inputTest.c  main.c
sports_trivia/include/: gamewindow.h  main.h  player.h  text.h
sports_trivia/resources/: trivia.db
sports_trivia/src/: gamewindow.c  main.c  text.c
